--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>camel-profit</title>
+    <!-- 🔴 修改点：增加了 viewport-fit=cover -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
+    <title>驼账宝</title>
+    <style>
+      /* 禁止长按弹出菜单和选择文字，让它更像原生 App */
+      * {
+        -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        -webkit-tap-highlight-color: transparent;
+      }
+      input, textarea {
+        -webkit-user-select: auto;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
