fix(用户引导): 修复引导步骤中高亮框和卡片定位不准确的问题
- 调整高亮框计算逻辑，延迟获取元素位置确保弹窗动画完成
- 移除设置引导中强制展开固定开支面板的代码，改为重置状态
- 禁用系统深色模式自动适配，确保界面一致性
- 提高用户引导组件的z-index至最大值，防止被遮挡

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
   <head>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        darkMode: 'class', // 禁用系统深色模式自动适配，强制使用浅色（除非手动加 dark 类）
+      }
+    </script>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <!-- 🔴 修改点：增加了 viewport-fit=cover -->
